adding unit test to the workflow

--- a/.github/workflows/android-workflow.yaml
+++ b/.github/workflows/android-workflow.yaml
@@ -14,3 +14,5 @@ jobs:
           java-version: 1.8
       - name: Print content in the current directory
         run: ls -la
+      - name: Unit test
+        run: ./gradlew testDebugUnitTest
