--- a/.github/workflows/android-workflow.yaml
+++ b/.github/workflows/android-workflow.yaml
@@ -12,7 +12,5 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
-      - name: Print content in the current directory
-        run: ls -la
-      - name: Unit test
+      - name: Unit tests
         run: ./gradlew testDebugUnitTest
