--- a/.github/workflows/android-workflow.yaml
+++ b/.github/workflows/android-workflow.yaml
@@ -4,7 +4,8 @@ on: [push]
 jobs:
   build-and-test:
     name: Build and Run test
-    runs-on: ubuntu-latest
+    # runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - name: checkout the current repository in the ubnuntu system
         uses: actions/checkout@v1
@@ -14,5 +15,16 @@ jobs:
           java-version: 1.8
       - name: Make gradlew executable
         run: chmod +x ./gradlew
-      - name: Unit tests
+      - name: Run Unit tests
         run: ./gradlew testDebugUnitTest
+
+      - name: Run instrumentation tests
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 29
+          arch: x86
+          profile: Nexus 6
+          avd-name: test
+          emulator-options: -no-window -gpu swiftshader_indirect -no-snapshot -noaudio -no-boot-anim -camera-back none
+          disable-animations: true
+          script: ./gradlew connectedCheck
