--- a/.github/workflows/android-workflow.yaml
+++ b/.github/workflows/android-workflow.yaml
@@ -28,3 +28,9 @@ jobs:
           emulator-options: -no-window -gpu swiftshader_indirect -no-snapshot -noaudio -no-boot-anim -camera-back none
           disable-animations: true
           script: ./gradlew connectedCheck
+      
+      - name: Upload Reports
+        uses: actions/upload-artifact@v1
+        with:
+           name: reports
+           path: app/build/reports
